--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -1,4 +1,4 @@
-<h1>Blog</h1>
+<!--	<h1>Blog</h1>
 {% for blog in blogs.all %}
 	{{ blog.title }}
 	<br>
@@ -8,4 +8,6 @@
 	<br>
 	{{ blog.text }}
 	<br>
-{% endfor %}
+{% endfor %}-->
+
+
