--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,3 @@
-<!--<h1>主页</h1>
-{% for gallery in gallerys.all %}
-	{{ gallery.description }}
-	src="{{ gallery.image.url }}"
-{% endfor %}-->
-
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -64,8 +57,8 @@
           <h1 class="jumbotron-heading">Album example</h1>
           <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
           <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+            <a href="blog" class="btn btn-primary my-2">我的博客</a>
+            <a href="" class="btn btn-secondary my-2">Secondary action</a>
           </p>
         </div>
       </section>
@@ -84,7 +77,7 @@
                 </div>
               </div>
             </div>     
-              		
+
           	{% endfor %}
           </div>
 
